w17 23.01.2017 19:46:07 +0300 - build 4886

1. forum: Не вставить символ как пометку в раскраске

drkns 20.01.2017 18:35:54 +0000 - build 4885

1. 0003385: Ломается пользовательское меню при его редактировании.

drkns 19.01.2017 23:30:22 +0000 - build 4884

1. Новые версии tinyxml2 и fmt.

drkns 19.01.2017 23:23:24 +0000 - build 4883

1. Рефакторинг.

svs 11.01.2017 15:22:11 +0300 - build 4882

1. SQLite 3.16.2

svs 04.01.2017 23:15:57 +0300 - build 4881

1. SQLite 3.16.1

w17 02.01.2017 13:31:46 +0300 - build 4880

1. Уточнение 4874

w17 02.01.2017 12:14:24 +0300 - build 4879

1. Уточнение и продолжение 4875

drkns 30.12.2016 21:51:04 +0200 - build 4878

1. Убран забытый отладочный код.

drkns 30.12.2016 20:12:15 +0200 - build 4877

1. Рефакторинг.

drkns 28.12.2016 23:04:30 +0200 - build 4876

1. С форума: в процессе переноса файлов с описаниями на панели мог отображаться мусор.

2. Рефакторинг.

w17 24.12.2016 21:57:03 +0300 - build 4875

1. 0003361: Запрашиваются админ. права для переименования файла

w17 24.12.2016 21:39:58 +0300 - build 4874

1. 0003366: расширение зоны действия Ctrl-Shift-S

w17 22.12.2016 20:51:29 +0300 - build 4873

1. -падение вьювера при поиске в ооочень длинных строках.

drkns 19.12.2016 20:38:48 +0200 - build 4872

1. Рефакторинг.

drkns 18.12.2016 18:52:41 +0200 - build 4871

1. Рефакторинг.

zg 17.12.2016 01:01:39 +0200 - build 4870

1. 0003367: Undo оставляет пробелы, которых не было.

drkns 14.12.2016 01:41:17 +0200 - build 4869

1. 0003353: Ошибка отрисовки при выходе машины из спячки.

2. Пара мелочей.

drkns 06.12.2016 09:32:48 +0200 - build 4868

1. Отменим пока 4866.1, т. к. стало хуже.

drkns 06.12.2016 02:43:44 +0200 - build 4867

1. Уточнение 4866.

drkns 06.12.2016 00:43:52 +0200 - build 4866

1. 0003361: Запрашиваются админ. права для переименования файла
   Суть не в запросе прав, а в поломанном копире. Часть 1, не факт, что поможет.
