@@ -114,7 +114,7 @@ void EditControl::SetMenuPos(VMenu2& menu)
 {
 	int MaxHeight = std::min(Global->Opt->Dialogs.CBoxMaxHeight.Get(),(long long)menu.size()) + 1;
 
-	int NewX2 = std::max(std::min(ScrX-2,(int)m_X2), m_X1 + 20);
+	const auto NewX2 = Clamp(static_cast<int>(m_X2), m_X1 + 20, ScrX - 2);
 
 	if((ScrY-m_Y1<MaxHeight && m_Y1>ScrY/2) || MenuUp)
 	{
@@ -810,7 +810,7 @@ int EditControl::ProcessMouse(const MOUSE_EVENT_RECORD *MouseEvent)
 					{
 						SelectionStart=m_CurPos;
 					}
-					Select(std::min(SelectionStart, m_CurPos), std::min(m_Str.size(), std::max(SelectionStart, m_CurPos)));
+					Select(std::min(SelectionStart, m_CurPos), Clamp(m_CurPos, SelectionStart, m_Str.size()));
 					Show();
 				}
 			}
