@@ -6802,7 +6802,7 @@ void Editor::EditorShowMsg(const string& Title,const string& Msg, const string& 
 	const auto strMsg = concat(Msg, L' ', Name);
 	if (Percent!=-1)
 	{
-		const size_t Length = std::max(std::min(ScrX - 1 - 10, static_cast<int>(strMsg.size())), 40);
+		const size_t Length = Clamp(static_cast<int>(strMsg.size()), 40, ScrX - 1 - 10);
 		strProgress = make_progressbar(Length, Percent, true, true);
 	}
 
