@@ -319,7 +319,7 @@ static auto FillFileTypesMenu(VMenu2* TypesMenu, int MenuPos)
 
 	TypesMenu->clear();
 
-	for (auto i: Data)
+	for (const auto& i: Data)
 	{
 		const auto AddLen = i.Description.size() - HiStrlen(i.Description);
 		MenuItemEx TypesMenuItem(concat(fit_to_left(i.Description, MaxElement->Description.size() + AddLen), L' ', BoxSymbols[BS_V1], L' ', i.Mask));
