@@ -33,9 +33,6 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "headers.hpp"
 #pragma hdrstop
 
-#include "headers.hpp"
-#pragma hdrstop
-
 #include "components.hpp"
 
 WARNING_PUSH(3)
