@@ -1,3 +1,9 @@
+drkns 23.01.2017 19:30:10 +0000 - build 4887
+
+1. Уточнение 4885.
+
+2. Рефакторинг.
+
 w17 23.01.2017 19:46:07 +0300 - build 4886
 
 1. forum: Не вставить символ как пометку в раскраске
